css edited: blue headers

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -199,7 +199,7 @@ input, select, textarea {
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-			color: inherit;
+			color: #191638; /* New: To match the logo */
 			text-decoration: none;
 		}
 
